@@ -6,6 +6,7 @@ import com.henry.challenge1.modules.videos.controllers.dtos.VideoResponseDTO;
 import com.henry.challenge1.modules.videos.models.VideoEntity;
 import com.henry.challenge1.modules.videos.models.enums.Status;
 import com.henry.challenge1.modules.videos.repositories.JpaVideoRepository;
+import com.henry.challenge1.modules._core.exceptions.ResourceNotFoundException;
 import com.henry.challenge1.modules.videos.useCases.mappers.VideoMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -16,7 +17,7 @@ public class RegisterVideoUseCase {
 
     private final JpaVideoRepository jpaVideoRepository;
 
-    private final JpaCategoryRepository  jpaCategoryRepository;
+    private final JpaCategoryRepository jpaCategoryRepository;
 
     private final VideoMapper videoMapper;
 
@@ -26,10 +27,11 @@ public class RegisterVideoUseCase {
         VideoEntity videoEntity = videoMapper.toDomain(dto);
         videoEntity.setStatus(Status.ACTIVE);
 
-        if(dto.categoryId() != null)
-            videoEntity.setCategory(this.jpaCategoryRepository.findById(dto.categoryId()).orElseThrow(RuntimeException::new));
-        else
-            videoEntity.setCategory(this.jpaCategoryRepository.findAll().get(0));
+        if (dto.categoryId() != null)
+            videoEntity.setCategory(this.jpaCategoryRepository.findById(dto.categoryId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Category Not Found")));
+
+        videoEntity.setCategory(this.jpaCategoryRepository.findAll().getFirst());
 
         videoEntity = this.jpaVideoRepository.save(videoEntity);
 
